--- a/template.html
+++ b/template.html
@@ -117,25 +117,25 @@
         </div>
       </div>
       <div class="row">
-        {% for category_name, items in all_liquids.items() %}
+        {% for category_name, products in all_liquids.items() %}
           <div class="col-12 section-title text-center mb-5">
             <h2 class="d-block">{{category_name}}</h2>
             <div class="row">
-              {% for item in items %}
+              {% for product in products %}
                 <div class="col-lg-4 mb-5 col-md-6">
                   <div class="wine_v_1 text-center pb-4 pt-5">
-                    <img src="images/{{item.Картинка}}" alt="Image" class="img-fluid">
-                    {% if item["Акция"] %}
+                    <img src="images/{{product.Картинка}}" alt="Image" class="img-fluid">
+                    {% if product["Акция"] %}
                       <img src="assets/profitable.png"
                            style="width:10rem;height: 10rem;position:absolute;right: -20px;top: -20px;">
                     {% endif %}
                       <div>
-                        <h3 class="heading mt-3 mb-3 text-dark">{{item.Название}}</h3>
+                        <h3 class="heading mt-3 mb-3 text-dark">{{product.Название}}</h3>
                         <p>
-                          {% if item["Сорт"] %}
-                            Сорт винограда - {{item.Сорт}}<br/>
+                          {% if product["Сорт"] %}
+                            Сорт винограда - {{product.Сорт}}<br/>
                           {% endif %}
-                          <span class="price">{{item.Цена}} р.</span>
+                          <span class="price">{{product.Цена}} р.</span>
                         </p>
                       </div>
                   </div>
